# Azalyx-CX

./: .gitignore  CHANGES.txt  CMakeLists.txt  LICENSE  NOTES_References.txt  README.md  README.txt  README_OpenBSD.txt  TODO.txt
sql/: sqlite.sql
src/: DataEnvelope.cpp  DataEnvelopeBody.cpp  DataEnvelopeChunker.cpp  DataEnvelopeHeader.cpp  DataResponseProcessor.cpp  Database.cpp  InitializeSettings.cpp  Logger.cpp  ServiceTcpProcessor.cpp  ServiceTcpProcessorTask.cpp  main.cpp
src/Command/: CommandHandler.cpp  CommandInterface.h  CommandShell.cpp
src/Data/: DataRequestProcessor.cpp  DataTransmogrifier.cpp  DataTransmogrifier.h
src/Data/Envelope/: DataEnvelope.h  DataEnvelopeFault.cpp  DataEnvelopeFault.h  DataEnvelopeHeader.h
src/Database/: Database.cpp
src/Logger/: Logger.cpp  Logger.h
src/Service/Tcp/: ServiceTcp.cpp  ServiceTcpProcessor.h
src/Settings/: SettingsInitialize.cpp
src/include/: CommandHandler.h  CommandShell.h  DataEnvelopeBody.h  DataEnvelopeChunker.h  DataRequestProcessor.h  DataResponseProcessor.h  Database.h  InitializeSettings.h  Logger.h  ServiceTcp.h  ServiceTcpProcessorTask.h
